--- a/project/client/templates/client_input.html
+++ b/project/client/templates/client_input.html
@@ -3,6 +3,7 @@
         <script src="static/js/client_script.js"></script>
             
 <link rel="stylesheet" type="text/css" href="/static/semantic/semantic.min.css">
+<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet"> 
     <script
       src="https://code.jquery.com/jquery-3.1.1.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
@@ -30,6 +31,12 @@
         }
     }
         </script>
+
+    <style>
+        div#response-col div {
+    padding-top: 13px;
+}
+    </style>
 </head>
     <body style="background-color:rgb(161, 240, 15); margin:20px; padding:10px; align:center;">
             <p style="color:aliceblue ; position:absolute; width:200px; top:2%; right:10%; font-size:30px">Cluster status:</p>
@@ -44,16 +51,16 @@
         </script>
         <div id="main-wrapper" style="position:relative; top:6%; margin:5px; padding:25px;display:flex; flex-direction:row; width:100%; height:55%; background-color:black">
                 <div id="request-col" style="flex:1; padding:20px; background-color:black; color:whitesmoke;font-size:20px;text-align:center;border:2px solid rgb(161,240,15);" > <p style="font-size:30px">CLIENT REQUEST</p> 
-                        <form style="display:flex; justify-content:center;align-items:center;">
+                        <div style="display:flex; justify-content:center;align-items:center;">
                                 
                                         <select class="ui dropdown" onchange="javascript:show_div(this.value);" id="selection" style="position:fixed; top:30%; ;width:250px">
                                             <option selected="true" disabled="disabled" >Selection</option>
-                                            <option value = "get">GET</option>
-                                            <option value = "put">PUT</option>
+                                            <option value= "get" >GET</option>
+                                            <option value= "put">PUT</option>
                                         </select>
                                         <div class="ui action input" id="get-div" style="visibility: hidden;display:none; position:fixed; top:40%">
                                             <input type="text" placeholder="Search..." name="key-value" id="get_key">
-                                            <button class="ui button">Search</button>
+                                            <button class="ui button" id="get-button">Search</button>
                                         </div>
                                         <div id="put-div" class="ui input" style="display:flex; flex-direction:column;visibility:hidden;position:fixed; align:center;top:40%">
   
@@ -66,19 +73,19 @@
                                             
                                         </div>
                                     
-                                </form>
+                        </div>
 
 
                 </div>
-                <div id="response-col" style="flex:1; padding:20px; background-color:black; color:whitesmoke; text-align:center; font-size:30px; border:2px solid rgb(161,240,15)">
-                    <p>HELLOOOO RESPONSE HERE</p> 
+                <div id="response-col" style="flex:1; padding:20px; background-color:black; color:whitesmoke; text-align:center; font-size:30px; border:2px solid rgb(161,240,15); display:flex; justify-content:center; flex-direction:column;">
+
                 </div>
         </div>
 
 
-        <div id="logs" class="ui raised segment" style="position:relative;top:10%;display:flex; flex-direction:row; width:100%; height:30%; background-color:black; color:white; align:center; font-size:20px">
-           <p style="text-align:center"> LOGS </p>
-         </div>
+        <textarea id="logs" class="ui raised segment" style="position:relative;top:10%;display:flex; flex-direction:row; width:100%; height:30%; background-color:black; color:white; align:center; font-size:20px; font-family:'Source Code Pro', monospace">
+                                                            LOGS 
+        </textarea>
 
         
       
